Align left and right links horizontally, put links on correct sides, put gap between links

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -30,6 +30,12 @@ ul {
   list-style-type: none;
 }
 
-.header {
+.header, .footer {
   display: flex;
+  justify-content: space-between;
+}
+
+.left-links, .right-links {
+  display: flex;
+  gap: 16px;
 }
